The UL style makes the cookies look bad, so added a class so I could align them correctly

--- a/nginx/web_code/stylesheets/default.css
+++ b/nginx/web_code/stylesheets/default.css
@@ -656,6 +656,10 @@ input:checked + .slider:before {
         padding-left: 35%;
     }
 
+    ul.cookies {
+        padding-left: 0;
+    }
+
     .wrapper{
         padding: 40px 0;
     }
